--- a/index.html
+++ b/index.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Pinterest</title>
-	<link rel="icon" type="image/png" href='img/pinterest.png'/>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/style.min.css">
+  <meta charset="UTF-8">
+  <title>Pinterest</title>
+  <link rel="icon" type="image/png" href='dist/img/pinterest.png'/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat" rel="stylesheet">
+  <link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 <body>
     <div>
-    	<nav>
-    	  <a href="#" class="nav-logo"><img src="img/pinterest.png" alt="logo" width="30"></a>
-    	  <div class="buscar">
-    	     <span><i class="material-icons">search</i></span>
+      <nav>
+        <a href="#" class="nav-logo"><img src="dist/img/pinterest.png" alt="logo" width="30"></a>
+        <div class="buscar">
+           <span><i class="material-icons">search</i></span>
              <input type="text" placeholder="Buscar" size="70">
           </div>
           <ul>
-          	<li><a href="#">Inicio</a></li>
-          	<li><a href="#">Guardado</a></li>
-          	<li><a href="#">Categorias</a></li>
-          	<li><a href="#">Notificaciones</a></li>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Guardado</a></li>
+            <li><a href="#">Categorias</a></li>
+            <li><a href="#">Notificaciones</a></li>
           </ul>
-    	</nav>
+      </nav>
+    </div>
+    <div class="enlaces">
+      <ul>
+          <li class="enlace1"><a href="#">Dress</a></li>
+          <li class="enlace2"><a href="#" >San Miguel de Allende</a></li>
+          <li class="enlace3"><a href="#">Friki</a></li>
+          <li class="enlace4"><a href="#">Invitaciones</a></li>
+          <li class="enlace5"><a href="#">Foography</a></li>
+          <li class="enlace6"><a href="#">Photocall</a></li>
+          <li class="enlace7"><a href="#">Damas</a></li>
+          <li class="enlace8"><a href="#">Ilumination</a></li>
+          <li class="enlace9"><a href="#">Ramo</a></li>
+      </ul>
     </div>
     <section id="imagenes" class="fotos">
-    	<!--Aqui iran las imaganes-->
+      <!--Aqui iran las imaganes-->
     </section>
-    <section class="modal">
-		   <!--Aqui ira el modal-->
-	</section>
+    <section class="cont-modal">
+      <!--Aqui ira el modal-->
+  </section>
     <script src="dist/js/script.js"></script>
 </body>
 </html>
